Fix poster spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1568,6 +1568,16 @@
 			height: 231px;
 		}
 
+		.poster {
+			display: inline-block;
+			float: right
+		}
+
+		.description {
+			display: inline-block;
+			float: left
+		}
+
 /* Footer */
 
 	#footer {
